fix: respect dynamic email configuration & cli fixes

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,14 @@ DYO_VERSION=stable
 DOMAIN=example.com
 TIMEZONE=Europe/Budapest
 ACME_EMAIL=user@example.com
+NODE_ENV=production
 
 # Database passwords
 CRUX_POSTGRES_PASSWORD=Random_Generated_String
 KRATOS_POSTGRES_PASSWORD=Random_Generated_String
+
+# External URL of the site https://example.com(:port if not 443)
+EXTERNAL_URL=https://example.com
 
 # Cookie/JWT secrets
 CRUX_SECRET=Random_Generated_String
@@ -14,6 +18,8 @@ KRATOS_SECRET=Random_Generated_String
 
 # Mailserver settings
 SMTP_URI=smtps://username:password@mailserver.example.com:465
+FROM_EMAIL=from@example.com
+FROM_NAME=dyrectorio Platform
 
 # Recaptcha secrets
 # In case you don't want to use ReCAPTCHA set DISABLE_RECAPTCHA to true
