fix: adjust review based on review comments

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Domain settings
 DYO_VERSION=stable
 DOMAIN=example.com
-TIMEZONE=Europe/Budapest
+TIMEZONE=UTC
 ACME_EMAIL=user@example.com
 NODE_ENV=production
 
