--- a/web/crux-ui/Dockerfile
+++ b/web/crux-ui/Dockerfile
@@ -23,7 +23,7 @@ WORKDIR /app
 
 ENV NODE_ENV production
 ENV NEXT_TELEMETRY_DISABLED 1
-ENV TZ Europe/Budapest
+ENV TZ UTC
 RUN apk --update add tzdata
 
 COPY --from=BUILDER --chown=node:node /app/public ./public
