--- a/web/docker-compose.dev.yaml
+++ b/web/docker-compose.dev.yaml
@@ -1,5 +1,5 @@
 # this file is for development,
-# when crux and crux-ui is executed locally using node
+# when crux and crux-ui is executed locally using NodeJS
 version: "3.3"
 services:
   crux-postgres:
