--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
     command:
       - serve
     environment:
-      - TZ=${TIMEZONE:-Europe/Budapest}
+      - TZ=${TIMEZONE:-UTC}
       - DATABASE_URL=postgresql://crux:${CRUX_POSTGRES_PASSWORD}@crux-postgres:5432/crux?schema=public
       - KRATOS_ADMIN_URL=http://kratos:4434
       - KRATOS_URL=http://kratos:4433
@@ -78,7 +78,7 @@ services:
     command:
       - migrate
     environment:
-      - TZ=${TIMEZONE:-Europe/Budapest}
+      - TZ=${TIMEZONE:-UTC}
       - DATABASE_URL=postgresql://crux:${CRUX_POSTGRES_PASSWORD}@crux-postgres:5432/crux?schema=public&connect_timeout=5
     depends_on:
       crux-postgres:
@@ -103,7 +103,7 @@ services:
   crux-ui:
     image: ghcr.io/dyrector-io/dyrectorio/web/crux-ui:${DYO_VERSION:-stable}
     environment:
-      - TZ=${TIMEZONE:-Europe/Budapest}
+      - TZ=${TIMEZONE:-UTC}
       - CRUX_UI_URL=${EXTERNAL_URL}
       - KRATOS_URL=http://kratos:4433
       - KRATOS_ADMIN_URL=http://kratos:4434
