fix(random): blahblah2

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
     - uses: actions/labeler@v4
       with:
+        source/web:
+        - any: [ 'web' ]
         source:web:
         - any: [ 'web' ]
         source:documentation:
