fix(random): blahblah3

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -7,33 +7,9 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
-    runs-on: ubuntu-22.04;
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/labeler@v4
       with:
-        source:web: 'web'
-        source:documentation: 'docs'
-        source:agent:
-        - 'golang/pkg/crane'
-        - 'golang/pkg/dagent'
-        - 'golang/cmd/crane'
-        - 'golang/cmd/dagent'
-        source:ci: '.github/workflows/'
-        source:build:
-        - '**/Makefile'
-        - 'web/kratos'
-        - '**/Dockerfile'
-        - 'golang/build'
-        source:cli:
-        - 'golang/pkg/cli'
-        - 'golang/cmd/dyo'
-        lang:makefile: '**/Makefile'
-        lang:shell:
-        - '**/*.sh'
-        - '**/*.sh.hbr'
-        - '**/*.ps1.hbr'
-        lang:golang: '**/*.go'
-        lang:typescript:
-        - '**/*.ts'
-        - '**/*.js'
+        CONFIGURATION_PATH: .github/labeler.yml
 
