--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,6 +1,6 @@
 name: "Pull Request Labeler"
 on:
-  pull_request:
+- pull_request_target
 
 jobs:
   triage:
@@ -10,6 +10,4 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
     - uses: actions/labeler@v4
-      with:
-        configuration-path: .github/labeler.yml
 
