--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,6 @@ node_modules/
 
 docker-compose.ci.yaml
 .idea
-dyo-offline-bundle.zip
+dyrectorio-offline-bundle*.zip
 
 git-history-visualization.mp4
