--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,11 +1,14 @@
-'source:web': 'web'
-'source:documentation': 'docs'
+'source:web':
+  - 'web'
+'source:documentation':
+  - 'docs'
 'source:agent':
   - 'golang/pkg/crane'
   - 'golang/pkg/dagent'
   - 'golang/cmd/crane'
   - 'golang/cmd/dagent'
-'source:ci': '.github/workflows'
+'source:ci':
+  - '.github/workflows'
 'source:build':
   - '**/Makefile'
   - 'images'
@@ -19,7 +22,8 @@
 'source:cli':
   - 'golang/pkg/cli'
   - 'golang/cmd/dyo'
-'lang:makefile': '**/Makefile'
+'lang:makefile':
+  - '**/Makefile'
 'lang:sql':
   - '**/*.prisma'
   - '**/*.sql'
@@ -27,7 +31,8 @@
   - '**/*.sh'
   - '**/*.sh.hbr'
   - '**/*.ps1.hbr'
-'lang:golang': '**/*.go'
+'lang:golang':
+  - '**/*.go'
 'lang:typescript':
   - '**/*.ts'
   - '**/*.js'
