--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,27 +1,27 @@
 'source:web':
-  - 'web'
+  - 'web/**'
 'source:documentation':
-  - 'docs'
+  - 'docs/**'
 'source:agent':
-  - 'golang/pkg/crane'
-  - 'golang/pkg/dagent'
-  - 'golang/cmd/crane'
-  - 'golang/cmd/dagent'
+  - 'golang/pkg/crane/**'
+  - 'golang/pkg/dagent/**'
+  - 'golang/cmd/crane/**'
+  - 'golang/cmd/dagent/**'
 'source:ci':
-  - '.github/workflows'
+  - '.github/workflows/**'
 'source:build':
   - '**/Makefile'
-  - 'images'
+  - 'images/**'
   - '**/Dockerfile'
-  - 'golang/build'
+  - 'golang/build/**'
 'source:kratos':
-  - 'web/kratos'
+  - 'web/kratos/**'
 'source:proto':
-  - 'proto'
+  - 'proto/**'
   - '**/*.proto'
 'source:cli':
-  - 'golang/pkg/cli'
-  - 'golang/cmd/dyo'
+  - 'golang/pkg/cli/**'
+  - 'golang/cmd/dyo/**'
 'lang:makefile':
   - '**/Makefile'
 'lang:sql':
