refactor: remove /new tag from crux api

--- a/docker-compose.http-only.yaml
+++ b/docker-compose.http-only.yaml
@@ -55,12 +55,12 @@ services:
       - traefik.http.routers.crux.service=crux
       - traefik.http.services.crux.loadbalancer.server.port=5000
       - traefik.http.services.crux.loadbalancer.server.scheme=h2c
-      - traefik.http.routers.crux-http.rule=Host(`${DOMAIN}`) && PathPrefix(`/api/new`)
+      - traefik.http.routers.crux-http.rule=Host(`${DOMAIN}`) && (PathPrefix(`/api`) && !PathPrefix(`/api/auth`) && !PathPrefix(`/api/status`))
       - traefik.http.routers.crux-http.entrypoints=web
       - traefik.http.routers.crux-http.service=crux-http
       - traefik.http.services.crux-http.loadbalancer.server.port=1848
       - traefik.http.routers.crux-http.middlewares=crux-strip
-      - traefik.http.middlewares.crux-strip.stripprefix.prefixes=/api/new
+      - traefik.http.middlewares.crux-strip.stripprefix.prefixes=/api
     # ports:
     #   - 1848:1848 # http API
 
