--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -5,7 +5,7 @@ on:
     types: [edited, opened, synchronize, reopened]
 
 jobs:
-  check_pr_title:
+  label_based_on_source_lang:
     permissions:
       contents: read
       pull-requests: write
@@ -25,5 +25,5 @@ jobs:
         with:
           configuration-path: .github/config/title_label_config.yml
           include-title: 1
-          repo-token: "${{ github.token }}"
+          repo-token: '${{ github.token }}'
           enable-versioned-regex: 0
