--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -22,7 +22,7 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-22.04
     steps:
-      - uses: github/issue-labeler@v3.1
+      - uses: actions/labeler@v4
         with:
           configuration-path: .github/config/title_label_config.yml
           include-title: 1
