--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -22,9 +22,8 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/labeler@v4
+      - uses: github/issue-labeler@v3.1
         with:
           configuration-path: .github/config/title_label_config.yml
           include-title: 1
           repo-token: '${{ github.token }}'
-          enable-versioned-regex: 0
