--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,30 +2,27 @@
 services:
   # If you plan to deploy where a proxy is already in place, feel free to remove the traefik service
   traefik:
+    container_name: traefik
     image: docker.io/library/traefik:2.9
     command:
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.web.address=:80"
-      - "--entrypoints.websecure.address=:443"
-      - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
-      - "--entrypoints.web.http.redirections.entrypoint.permanent=true"
-      - "--certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web"
-      - "--certificatesresolvers.letsencrypt.acme.email=${ACME_EMAIL}"
-      - "--certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json"
-    ports:
-      - "80:80"
-      - "443:443"
+      - --providers.docker=true
+      - --providers.docker.exposedbydefault=false
+      - --entrypoints.web.address=:80
+      - --entrypoints.websecure.address=:443
+      - --entrypoints.web.http.redirections.entrypoint.scheme=https
+      - --entrypoints.web.http.redirections.entrypoint.permanent=true
+      - --certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web
+      - --certificatesresolvers.letsencrypt.acme.email=${ACME_EMAIL}
+      - --certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json
+    ports: ['80:80', '443:443']
     volumes:
-      - "letsencrypt:/letsencrypt"
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      # - "/run/podman/podman.sock:/var/run/docker.sock:ro"
+      - letsencrypt:/letsencrypt
+      - ${DOCKER_SOCKET:-/var/run/docker.sock}:/var/run/docker.sock:ro
     restart: unless-stopped
-
   crux:
+    container_name: crux
     image: ghcr.io/dyrector-io/dyrectorio/web/crux:${DYO_VERSION:-stable}
-    command:
-      - serve
+    command: [serve]
     environment:
       - TZ=${TIMEZONE:-UTC}
       - DATABASE_URL=postgresql://crux:${CRUX_POSTGRES_PASSWORD}@crux-postgres:5432/crux?schema=public
@@ -68,37 +65,35 @@ services:
       - traefik.http.routers.crux-http.tls=true
       - traefik.http.routers.crux-http.tls.domains[0].main=${DOMAIN}
       - traefik.http.routers.crux-http.tls.certresolver=letsencrypt
-    # ports:
-    #   - 1848:1848 # http API
-
+      # ports:
+      #   - 1848:1848 # http API
   crux-migrate:
+    container_name: crux-migrate
     image: ghcr.io/dyrector-io/dyrectorio/web/crux:${DYO_VERSION:-stable}
-    command:
-      - migrate
+    command: [migrate]
     environment:
       - TZ=${TIMEZONE:-UTC}
       - DATABASE_URL=postgresql://crux:${CRUX_POSTGRES_PASSWORD}@crux-postgres:5432/crux?schema=public&connect_timeout=5
     depends_on:
       crux-postgres:
         condition: service_healthy
-    restart: "no"
-
+    restart: 'no'
   crux-postgres:
+    container_name: crux-postgres
     image: docker.io/library/postgres:13-alpine
     environment:
       - POSTGRES_PASSWORD=${CRUX_POSTGRES_PASSWORD}
       - POSTGRES_USER=crux
       - POSTGRES_DB=crux
     restart: unless-stopped
-    volumes:
-      - crux-db:/var/lib/postgresql/data
+    volumes: ['crux-db:/var/lib/postgresql/data']
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [CMD-SHELL, pg_isready -U crux]
       interval: 5s
       timeout: 5s
       retries: 5
-
   crux-ui:
+    container_name: crux-ui
     image: ghcr.io/dyrector-io/dyrectorio/web/crux-ui:${DYO_VERSION:-stable}
     environment:
       - TZ=${TIMEZONE:-UTC}
@@ -123,8 +118,8 @@ services:
       - traefik.http.routers.crux-ui.tls=true
       - traefik.http.routers.crux-ui.tls.domains[0].main=${DOMAIN}
       - traefik.http.routers.crux-ui.tls.certresolver=letsencrypt
-
   kratos:
+    container_name: kratos
     image: ghcr.io/dyrector-io/dyrectorio/web/kratos:${DYO_VERSION:-stable}
     environment:
       - SQA_OPT_OUT=true
@@ -161,8 +156,8 @@ services:
       - traefik.http.routers.kratos.tls=true
       - traefik.http.routers.kratos.tls.domains[0].main=${DOMAIN}
       - traefik.http.routers.kratos.tls.certresolver=letsencrypt
-
   kratos-migrate:
+    container_name: kratos-migrate
     image: ghcr.io/dyrector-io/dyrectorio/web/kratos:${DYO_VERSION:-stable}
     command: -c /etc/config/kratos/kratos.yaml migrate sql -e --yes
     environment:
@@ -170,32 +165,30 @@ services:
       - DSN=postgres://kratos:${KRATOS_POSTGRES_PASSWORD}@kratos-postgres:5432/kratos?sslmode=disable&max_conns=20&max_idle_conns=4
     depends_on:
       kratos-postgres:
-        condition: service_started
-    restart: "no"
-
+        condition: service_healthy
+    restart: 'no'
   kratos-postgres:
+    container_name: kratos-postgres
     image: docker.io/library/postgres:13-alpine
     environment:
       - POSTGRES_PASSWORD=${KRATOS_POSTGRES_PASSWORD}
       - POSTGRES_USER=kratos
       - POSTGRES_DB=kratos
     restart: unless-stopped
-    volumes:
-      - kratos-db:/var/lib/postgresql/data
+    volumes: ['kratos-db:/var/lib/postgresql/data']
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [CMD-SHELL, pg_isready -U kratos]
       interval: 5s
       timeout: 5s
       retries: 5
-
-  # This is insecure, do not use this in production or on the public internet
-  # mailslurper:
-  #   image: docker.io/oryd/mailslurper:smtps-latest
-  #   ports: # port 1025 is used internally for smtp, you do not have to expose that
-  #     - 4436:4436 # web UI
-  #     - 4437:4437 # http API
-  #   restart: unless-stopped
-
+# # This is insecure, do not use this in production or on the public internet
+#   mailslurper:
+#     container_name: mailslurper
+#     image: docker.io/oryd/mailslurper:smtps-latest
+#     ports:  # port 1025 is used internally for smtp, you do not have to expose that
+#       - 4436:4436  # web UI
+#       - 4437:4437  # http API
+#     restart: unless-stopped
 volumes:
   letsencrypt:
   crux-db:
