--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,39 +1,21 @@
-'source:web':
-  - 'web/**'
-'source:documentation':
-  - 'docs/**'
-  - '**/*.md'
-'source:agent':
-  - 'golang/pkg/crane/**'
-  - 'golang/pkg/dagent/**'
-  - 'golang/cmd/crane/**'
-  - 'golang/cmd/dagent/**'
-'source:ci':
-  - '.github/workflows/**'
-'source:build':
+source:web: [web/**]
+source:documentation: [docs/**, '**/*.md']
+source:agent:
+  - golang/pkg/crane/**
+  - golang/pkg/dagent/**
+  - golang/cmd/crane/**
+  - golang/cmd/dagent/**
+source:ci: [.github/workflows/**]
+source:build:
   - '**/Makefile'
-  - 'images/**'
+  - images/**
   - '**/Dockerfile'
-  - 'golang/build/**'
-'source:kratos':
-  - 'web/kratos/**'
-'source:proto':
-  - 'proto/**'
-  - '**/*.proto'
-'source:cli':
-  - 'golang/pkg/cli/**'
-  - 'golang/cmd/dyo/**'
-'lang:makefile':
-  - '**/Makefile'
-'lang:sql':
-  - '**/*.prisma'
-  - '**/*.sql'
-'lang:shell':
-  - '**/*.sh'
-  - '**/*.sh.hbr'
-  - '**/*.ps1.hbr'
-'lang:golang':
-  - '**/*.go'
-'lang:typescript':
-  - '**/*.ts'
-  - '**/*.js'
+  - golang/build/**
+source:kratos: [web/kratos/**]
+source:proto: [proto/**, '**/*.proto']
+source:cli: [golang/pkg/cli/**, golang/cmd/dyo/**]
+lang:makefile: ['**/Makefile']
+lang:sql: ['**/*.prisma', '**/*.sql']
+lang:shell: ['**/*.sh', '**/*.sh.hbr', '**/*.ps1.hbr']
+lang:golang: ['**/*.go']
+lang:typescript: ['**/*.ts', '**/*.js']
