feat: container config annotations

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -29,3 +29,6 @@ DISABLE_RECAPTCHA=true
 RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
 
 NODE_ENV=development
+
+# overriding the node dns result order regardless of the NODE_ENV value
+#DNS_DEFAULT_RESULT_ORDER=ipv4first
