--- a/web/crux-ui/.env.example
+++ b/web/crux-ui/.env.example
@@ -17,3 +17,6 @@ E2E_BASE_URL=http://localhost:8000
 # Docker HUB Proxy (optional)
 # HUB_PROXY_URL=http://<proxy_url>
 # HUB_PROXY_TOKEN=<proxy_token>
+
+# overriding the node dns result order regardless of the NODE_ENV value
+#DNS_DEFAULT_RESULT_ORDER=ipv4first
