feat(crux): add pino logger, and small config refactors

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -13,6 +13,7 @@ JWT_SECRET=jwt-secret-token
 # install script docker pull disabled for the e2e tests
 AGENT_INSTALL_SCRIPT_DISABLE_PULL=true
 
+# Possible values: trace, debug, info, warn, error, and fatal
 LOG_LEVEL=verbose
 
 GRPC_AGENT_PORT=5000
