--- a/web/crux/package.json
+++ b/web/crux/package.json
@@ -65,10 +65,12 @@
     "google-auth-library": "^8.7.0",
     "google-protobuf": "^3.21.2",
     "handlebars": "^4.7.7",
+    "nestjs-pino": "^3.2.0",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.10.0",
+    "pino-http": "^8.3.3",
     "prom-client": "^14.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.0",
@@ -100,6 +102,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.5.0",
+    "pino-pretty": "^10.0.0",
     "prettier": "^2.8.8",
     "prisma": "4.13.0",
     "ts-jest": "^29.1.0",
