--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -14,7 +14,7 @@ JWT_SECRET=jwt-secret-token
 AGENT_INSTALL_SCRIPT_DISABLE_PULL=true
 
 # Possible values: trace, debug, info, warn, error, and fatal
-LOG_LEVEL=verbose
+LOG_LEVEL=debug
 
 GRPC_AGENT_PORT=5000
 HTTP_API_PORT=1848
